--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "sereneappdev" #Must be unique in Heroku
+          heroku_app_name: "sereneapp" #Must be unique in Heroku
           heroku_email: "lellison6@student.gsu.edu"
           team: "serene-team"
           usedocker: true
