--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "icons": "^1.0.0",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
